test/src/e2e_vm_tests/test_programs/should_pass/language/primitive_type_argument/src/foo.sw
library foo;

dep bar/baz;
