test/src/e2e_vm_tests/test_programs/should_fail/dependency_parsing_error/src/bar.sw
library bar;
//dep a_dependency;

